TravelForceBookingSystem/force-app/main/default/objects/Trip__c/fields/ExternalSynSuccessful__c.field-meta.xml
<CustomField>
    <fullName>ExternalSynSuccessful__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked by the system when trip or booking is synced to external booking system</description>
    <inlineHelpText>This is checked by the system when trip or booking is synced to external booking system</inlineHelpText>
    <label>ExternalSynSuccessful</label>
    <type>Checkbox</type>
</CustomField>