TravelForceBookingSystem/force-app/main/default/objects/Trip__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Flight Available on this trip</description>
    <inlineHelpText>Flight Available on this trip</inlineHelpText>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>