TravelForceBookingSystem/force-app/main/default/objects/Trip__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Contact.Name + Preferred trip start date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contact.Name + Preferred trip start date</inlineHelpText>
    <label>Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>