TravelForceBookingSystem/force-app/main/default/objects/Trip__c/fields/Preferred_Trip_Start__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Trip_Start__c</fullName>
    <description>The date the trip is preferred to start</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the trip is preferred to start</inlineHelpText>
    <label>Preferred Trip Start</label>
    <type>Date</type>
</CustomField>