TravelForceBookingSystem/force-app/main/default/objects/Trip__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ticket reserved for this flight</description>
    <inlineHelpText>Ticket reserved for this flight</inlineHelpText>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>