TravelForceBookingSystem/force-app/main/default/objects/Trip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Flight__c</columns>
    <columns>Ticket__c</columns>
    <columns>Status__c</columns>
    <columns>ExternalSynSuccessful__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>